// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page renders nothing until layout 1`] = `
<div
  class="css-view-1dbjc4n r-flex-13awgt0"
  data-testid="page"
/>
`;

exports[`Page with narrow parent renders with a narrow layout 1`] = `
<div
  class="css-view-1dbjc4n r-flex-13awgt0 r-flexDirection-eqz5dr"
  data-testid="page"
>
  <mock-navigation />
  <mock-main>
    <div
      class="css-text-76zvg2"
      dir="auto"
    >
      OHAI
    </div>
  </mock-main>
</div>
`;

exports[`Page with wide parent renders with a wide layout 1`] = `
<div
  class="css-view-1dbjc4n r-flex-13awgt0 r-flexDirection-18u37iz"
  data-testid="page"
>
  <mock-navigation />
  <mock-main>
    <div
      class="css-text-76zvg2"
      dir="auto"
    >
      OHAI
    </div>
  </mock-main>
</div>
`;
